examples/test/testpolicy7367.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7367
  namespace: namespace478
spec:
  podSelector:
    matchLabels:
      key44: value36
      key47: value44
      key14: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value24
          key19: value22
      podSelector:
        matchLabels:
          key8: value0
